--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "ember-cli-rails-addon": "0.8.0",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "5.6.0",
+    "ember-cli-showdown": "2.8.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
@@ -42,6 +43,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "ember-welcome-page": "^1.0.3",
-    "loader.js": "^4.0.10"
+    "loader.js": "^4.0.10",
+    "showdown": "1.5.0"
   }
 }
