--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -4,7 +4,6 @@
     "ember": "~2.9.0",
     "ember-cli-shims": "0.1.3",
     "bootstrap": "~3.3.5",
-    "showdown": "^1.5.0",
-    "bootcards": "^1.1.2"
+    "showdown": "^1.5.0"
   }
 }
